--- a/.github/workflows/main_praktikum-web-2-laravel.yml
+++ b/.github/workflows/main_praktikum-web-2-laravel.yml
@@ -29,10 +29,10 @@ jobs:
           node-version: '18'
 
       - name: Install npm dependencies and build frontend
-        run: 
+        run: |
           npm install
           npm run build
-          
+
       - name: Check if composer.json exists
         id: check_files
         uses: andstor/file-existence-action@v1
@@ -44,7 +44,7 @@ jobs:
         run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip . -x "node_modules/*" ".git/*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
