--- a/.github/workflows/main_praktikum-web-2-laravel.yml
+++ b/.github/workflows/main_praktikum-web-2-laravel.yml
@@ -44,7 +44,7 @@ jobs:
         run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip . -x "node_modules/*" ".git/*
+        run: zip -r release.zip . -x "node_modules/*" ".git/*"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
